dataset1235/2025-2/2868285114/users/1746929503/executions/3649835072_3921830315.log
== SUBMISSION (2025-08-19 23:24:54)
-- CODE: 
quantidade = float(input())

totalSem = (quantidade * 2.86) + 50.00
totamCom = totalSem + totalSem*(34/100)

print (round (totalCom,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:25:42)
-- CODE: 
quantidade = float(input())

totalSem = (quantidade * 2.86) + 50.00
totamCom = totalSem + totalSem*(34/100)

print ( round (totalCom,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print ( round (totalCom,2))
                   ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print ( round (totalCom,2))
                   ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print ( round (totalCom,2))
                   ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print ( round (totalCom,2))
                   ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print ( round (totalCom,2))
                   ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print ( round (totalCom,2))
                   ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 23:24:58)
-- CODE: 
quantidade = float(input())

totalSem = (quantidade * 2.86) + 50.00
totamCom = totalSem + totalSem*(34/100)

print (round (totalCom,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 23:25:16)
-- CODE: 
quantidade = float(input())

totalSem = (quantidade * 2.86) + 50.00
totamCom = totalSem + totalSem*(34/100)

print (round (totalCom,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:26:35)
-- CODE: 
quantidade = float(input())

totalSem = (quantidade * 2.86) + 50.00
totalCom = totalSem + totalSem*(34/100)

print ( round (totalCom,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:25:11)
-- CODE: 
quantidade = float(input())

totalSem = (quantidade * 2.86) + 50.00
totamCom = totalSem + totalSem*(34/100)

print (round (totalCom,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print (round (totalCom,2))
                  ^^^^^^^^
NameError: name 'totalCom' is not defined. Did you mean: 'totamCom'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:49:51)
-- CODE: 
quantLabastecido = float(input())
valorTotal = (quantLabastecido*2.86) + 50
valorTaxa = valorTotal + valorTotal * (34/100)
print(round(valorTaxa,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
